Add plot format to 02DK
Make linklength naming consistent

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -312,7 +312,7 @@
     "axes.set_xlim([0, xmax])\n",
     "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"linklengths\")"
+    "fig.savefig(PATH[\"plot\"] + \"linklengthhist\" + \".\" + PLOTPARAM[\"format\"])"
    ]
   },
   {
@@ -498,7 +498,7 @@
     "axes.set_xlim([0, xmax])\n",
     "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"links\")"
+    "fig.savefig(PATH[\"plot\"] + \"linklengths\" + \".\" + PLOTPARAM[\"format\"])"
    ]
   },
   {
@@ -682,7 +682,7 @@
     "#     mode=layout_mode\n",
     "# )\n",
     "# plt.text(0, 0.17, \"Average loop length\")\n",
-    "# fig.savefig(PATH[\"plot\"] + \"avglooplength_\" + str(LOOP_NUMNODE_BOUND));"
+    "# fig.savefig(PATH[\"plot\"] + \"avglooplength_\" + str(LOOP_NUMNODE_BOUND) + \".\" + PLOTPARAM[\"format\"]);"
    ]
   },
   {
@@ -856,7 +856,7 @@
     "axes.set_xlim([0, xmax])\n",
     "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"facelooplengthhist\");"
+    "fig.savefig(PATH[\"plot\"] + \"facelooplengthhist\" + \".\" + PLOTPARAM[\"format\"]);"
    ]
   },
   {
@@ -1077,7 +1077,7 @@
     "axes.set_xlim([0, xmax])\n",
     "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"facelooplengths\")"
+    "fig.savefig(PATH[\"plot\"] + \"facelooplengths\" + \".\" + PLOTPARAM[\"format\"])"
    ]
   },
   {
@@ -1261,7 +1261,7 @@
     "axes.set_xlim([0, xmax])\n",
     "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"maxslopes\")"
+    "fig.savefig(PATH[\"plot\"] + \"maxslopes\" + \".\" + PLOTPARAM[\"format\"])"
    ]
   },
   {
@@ -1397,7 +1397,7 @@
     "axes.set_xticklabels([0, 1, 2, 3])\n",
     "axes.set_xlim([0, xmax + 1])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"poidiversities\")"
+    "fig.savefig(PATH[\"plot\"] + \"poidiversities\" + \".\" + PLOTPARAM[\"format\"])"
    ]
   },
   {
