Attempt to count nodes per face loop (not working)

--- a/code/01DK_create_loops.ipynb
+++ b/code/01DK_create_loops.ipynb
@@ -196,7 +196,7 @@
    "outputs": [],
    "source": [
     "# Code from: https://github.com/anastassiavybornova/bike-node-planner/blob/main/scripts/script06.py\n",
-    "_, es = momepy.nx_to_gdf(net=Gnx, points=True, lines=True)\n",
+    "ns, es = momepy.nx_to_gdf(net=Gnx, points=True, lines=True)\n",
     "\n",
     "linestrings = (\n",
     "    es.geometry.copy()\n",
@@ -212,6 +212,49 @@
     "faceloops = gpd.GeoDataFrame(geometry=polygons, crs=es.crs)\n",
     "if debug:\n",
     "    print(faceloops.head(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88902749-ef58-45ea-8fd5-f981c269bda1",
+   "metadata": {},
+   "source": [
+    "Code to fix below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7525a45c-13c4-48b7-8365-1ff7562a7fc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "faceloopnodes = []\n",
+    "for fl in faceloops.itertuples():  # loop through each face loop fl\n",
+    "    nsinters = ns.intersection(\n",
+    "        fl.geometry\n",
+    "    )  # intersect all nodes with the fl's geometry\n",
+    "    nsinters = nsinters[~nsinters.is_empty]  # remove empties\n",
+    "    faceloopnodes.append(len(nsinters))  # save number of nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5323056d-b56a-49ae-8ea8-24df844f8911",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(faceloopnodes, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "# Something is wrong. There are 320 faces without nodes, 949 with just 1 node, 1123 with just 2 nodes?? But each face needs to have at least 3 nodes!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c579a812-9f9d-46da-ab6d-69457b48d0a7",
+   "metadata": {},
+   "source": [
+    "Code to fix above"
    ]
   },
   {
