Fix all same max ylim values in map insets

--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -22,7 +22,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-25  \n",
-    "Last modified: 2025-06-20"
+    "Last modified: 2025-06-24"
    ]
   },
   {
@@ -32,7 +32,8 @@
    "source": [
     "## To do\n",
     "- [X] Refactor with functions for restrictions\n",
-    "- [X] POI analysis"
+    "- [X] POI analysis\n",
+    "- [X] Fix all same max ylim values at ~8000"
    ]
   },
   {
@@ -49,7 +50,6 @@
    "metadata": {},
    "source": [
     "- [X] Polish nw plotting: colors, proj, transparency, keep values fixed\n",
-    "- [ ] Study ideal knude net (triangle grid,..). What is an ideal knude network? Geometric consistency of DKNT design principles?\n",
     "- [ ] Distribution/spatial clustering of slopes, pois in DK. How does it affect loops? Compare with random redistribution. Easy to add few POIS to dramatically increase coverage? \"identify/fix POI deserts\"\n",
     "- [ ] Is node density a proxy for loop census size?"
    ]
@@ -204,7 +204,7 @@
     "    link_width=0.3,\n",
     "    link_color=\"#444444\",\n",
     ")\n",
-    "plot_dk_inset(fig, allloops)\n",
+    "plot_dk_inset(fig, allloops, 8, 7800)\n",
     "fig.savefig(PATH[\"plot\"] + \"network_numloops_all\" + \".\" + PLOTPARAM[\"format\"])"
    ]
   },
@@ -262,7 +262,7 @@
     "    link_color=PLOTPARAM[\"color\"][\"neutral\"],\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=1)\n",
-    "plot_dk_inset(fig, allloops_bound)\n",
+    "plot_dk_inset(fig, allloops_bound, 8, 7800)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -331,7 +331,7 @@
     "    link_color=link_colors,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=2)\n",
-    "plot_dk_inset(fig, allloops_bound_sloped)\n",
+    "plot_dk_inset(fig, allloops_bound_sloped, 8, 7800)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -397,7 +397,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i functions.py\n",
     "# Plot all bounded sloped loops\n",
     "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped_watered)\n",
     "link_widths, link_colors = get_link_plotinfo(\n",
@@ -417,7 +416,7 @@
     "    link_color=link_colors,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=3)\n",
-    "plot_dk_inset(fig, allloops_bound_sloped_watered)\n",
+    "plot_dk_inset(fig, allloops_bound_sloped_watered, 8, 7800)\n",
     "\n",
     "\n",
     "fig.savefig(\n",
@@ -473,7 +472,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i functions.py\n",
     "# Plot all bounded sloped loops\n",
     "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped_watered_diverse)\n",
     "link_widths, link_colors = get_link_plotinfo(\n",
@@ -493,7 +491,7 @@
     "    link_color=link_colors,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=4)\n",
-    "plot_dk_inset(fig, allloops_bound_sloped_watered_diverse)\n",
+    "plot_dk_inset(fig, allloops_bound_sloped_watered_diverse, 8, 7800)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
