--- a/code/04_synthetic_network_analysis.ipynb
+++ b/code/04_synthetic_network_analysis.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-28  \n",
-    "Last modified: 2024-10-31"
+    "Last modified: 2025-06-24"
    ]
   },
   {
@@ -31,6 +31,7 @@
     "- [X] Bring into same data format as real networks\n",
     "- [X] Calculate linklength vs face loops (just 3*, 4*, 6* ranges)\n",
     "- [X] Analyze: size/linklength vs loops, correspondence with scenarios\n",
+    "- [X] Study ideal knude net (triangle grid,..). What is an ideal knude network? Geometric consistency of DKNT design principles?\n",
     "- [ ] Analyze: border effects"
    ]
   },
@@ -50,7 +51,7 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "load_data = False  # Set to False if data are huge and have already been loaded\n",
+    "load_data = True  # Set to False if data are huge and have already been loaded\n",
     "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
     "gsize_set = 4  # number of nodes in each dimension. Networks will have ~size^2 nodes.\n",
@@ -170,6 +171,7 @@
     "degree_hist = nx.degree_histogram(Gnx_DK)\n",
     "print(list(range(len(degree_hist))))\n",
     "print(degree_hist)\n",
+    "print([d / sum(degree_hist) for d in degree_hist])\n",
     "print(str(round(100 * degree_hist[3] / sum(degree_hist))) + \"% of nodes have degree 3.\")"
    ]
   },
