--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -23,7 +23,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-01  \n",
-    "Last modified: 2024-10-21"
+    "Last modified: 2025-08-01"
    ]
   },
   {
@@ -103,8 +103,8 @@
     "    ) + np.random.rand(edges.shape[0])\n",
     "nodes = gpd.read_file(PATH[\"data_in_network\"] + \"nodes.gpkg\")\n",
     "# Set CRS\n",
-    "edges.set_crs(\"epsg:25832\")\n",
-    "nodes.set_crs(\"epsg:25832\");"
+    "edges.set_crs(epsg=25832, inplace=True)\n",
+    "nodes.set_crs(epsg=25832, inplace=True)"
    ]
   },
   {
