--- a/code/05DK_hexgrid_correlations.ipynb
+++ b/code/05DK_hexgrid_correlations.ipynb
@@ -179,13 +179,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c309ab9-6a31-4a3f-92ef-804599e00bc0",
+   "metadata": {},
+   "source": [
+    "### Node density"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "01c8dc2c-953f-481f-8e7b-10ec8538190d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes.plot.scatter(x=\"x\", y=\"y\", style=\".\", alpha=0.5, figsize=(5, 5));"
+    "if debug:\n",
+    "    nodes.plot.scatter(x=\"x\", y=\"y\", style=\".\", alpha=0.5, figsize=(5, 5))"
    ]
   },
   {
@@ -199,7 +208,8 @@
     "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
     ")  # drop all data\n",
     "nodes_nodata.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
-    "nodes_nodata.head()"
+    "if debug:\n",
+    "    print(nodes_nodata.head())"
    ]
   },
   {
@@ -210,7 +220,8 @@
    "outputs": [],
    "source": [
     "nodesh3 = nodes_nodata.assign(count=1).h3.geo_to_h3_aggregate(6)\n",
-    "nodesh3.head()"
+    "if debug:\n",
+    "    print(nodesh3.head())"
    ]
   },
   {
@@ -222,6 +233,96 @@
    "source": [
     "nodesh3.plot(column=\"count\", figsize=(5, 5), legend=True)\n",
     "plt.title(\"Node density\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a60dd82-1770-4edc-910f-3d98e47385e1",
+   "metadata": {},
+   "source": [
+    "### Loop census"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41e6ce1c-4e67-43d7-8e74-0fe3110e71d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if debug:\n",
+    "    # Plot all loops\n",
+    "    vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops)\n",
+    "    fig, ax = plot_dk_gdf(\n",
+    "        nodes,\n",
+    "        edges,\n",
+    "        scale=1,\n",
+    "        vertex_size=vertex_sizes,\n",
+    "        vertex_color=vertex_colors,\n",
+    "        link_width=0.3,\n",
+    "        link_color=\"#444444\",\n",
+    "    )\n",
+    "    plot_dk_inset(fig, allloops, 8, 7800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b63d62b-ec42-4c13-9627-5723922ec16f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_loopnum = nodes.drop(\n",
+    "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
+    ")  # drop all data\n",
+    "nodes_loopnum.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
+    "nodes_loopnum[\"loopnum\"] = get_vertex_loopnums(allloops, \"log2\").tolist()\n",
+    "if debug:\n",
+    "    print(nodes_loopnum.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fe18209-408b-46b7-afa7-c3f540130cac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_loopnumh3 = nodes_loopnum.h3.geo_to_h3_aggregate(6, \"mean\")\n",
+    "if debug:\n",
+    "    print(nodes_loopnumh3.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adc27857-10ca-4e66-b411-8ef5400d66ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_loopnumh3.plot(column=\"loopnum\", figsize=(5, 5), legend=True)\n",
+    "plt.title(\"Average loop bits\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bca00f6-0fb5-41e2-b512-245af5f0ccaa",
+   "metadata": {},
+   "source": [
+    "## Correlate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d747fd9f-2f6b-4cb9-9171-db349a4483e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfunified = nodesh3.join(nodes_loopnumh3.drop(columns=\"geometry\")).rename(\n",
+    "    columns={\"count\": \"Node density\", \"loopnum\": \"Loop bits\"}\n",
+    ")\n",
+    "pd.plotting.scatter_matrix(dfunified, alpha=0.05, figsize=(6, 6));"
    ]
   }
  ],
