Add scenario restrictions to 05DK

--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -22,7 +22,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-25  \n",
-    "Last modified: 2025-06-24"
+    "Last modified: 2025-08-01"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "outputs": [],
    "source": [
     "allloops_bound_sloped_watered = {}\n",
-    "for sourcenode in allloops_bound_sloped:\n",
+    "for sourcenode in tqdm(allloops_bound_sloped, desc=\"Restrict to water limits\"):\n",
     "    try:\n",
     "        numloops = len(allloops_bound_sloped[sourcenode][\"loops\"])\n",
     "        mask_this = [True] * numloops\n",
@@ -450,13 +450,15 @@
    "outputs": [],
    "source": [
     "allloops_bound_sloped_watered_diverse = {}\n",
-    "for sourcenode in allloops_bound_sloped_watered:\n",
+    "for sourcenode in tqdm(\n",
+    "    allloops_bound_sloped_watered, desc=\"Restrict with POI diversity\"\n",
+    "):\n",
     "    try:\n",
     "        numloops = len(allloops_bound_sloped_watered[sourcenode][\"loops\"])\n",
     "        mask_this = [False] * numloops\n",
     "        for i in range(numloops):\n",
-    "            pd = allloops_bound_sloped_watered[sourcenode][\"poi_diversity\"][i]\n",
-    "            if pd >= 3:\n",
+    "            poidiv = allloops_bound_sloped_watered[sourcenode][\"poi_diversity\"][i]\n",
+    "            if poidiv >= 3:\n",
     "                mask_this[i] = True\n",
     "        allloops_bound_sloped_watered_diverse[sourcenode] = mask_node(\n",
     "            allloops_bound_sloped_watered[sourcenode], mask_this\n",
