--- a/code/05DK_hexgrid_correlations.ipynb
+++ b/code/05DK_hexgrid_correlations.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "%run -i setup_parameters.py\n",
     "load_data = True  # Set to False if data are huge and have already been loaded\n",
-    "debug = True  # Set to True for extra plots and verbosity"
+    "debug = False  # Set to True for extra plots and verbosity"
    ]
   },
   {
@@ -244,25 +244,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60b10bcb-f070-490e-bfe2-9fd34b713cb1",
+   "metadata": {},
+   "source": [
+    "#### Restrict to scenario lengths"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41e6ce1c-4e67-43d7-8e74-0fe3110e71d4",
+   "id": "1593b251-e668-4a89-9495-db32f9d60126",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if debug:\n",
-    "    # Plot all loops\n",
-    "    vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops)\n",
-    "    fig, ax = plot_dk_gdf(\n",
-    "        nodes,\n",
-    "        edges,\n",
-    "        scale=1,\n",
-    "        vertex_size=vertex_sizes,\n",
-    "        vertex_color=vertex_colors,\n",
-    "        link_width=0.3,\n",
-    "        link_color=\"#444444\",\n",
-    "    )\n",
-    "    plot_dk_inset(fig, allloops, 8, 7800)"
+    "allloops_bound = {}\n",
+    "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lengths\"):\n",
+    "    try:\n",
+    "        lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
+    "        mask_this = (lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]) & (\n",
+    "            lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
+    "        )\n",
+    "        allloops_bound[sourcenode] = mask_node(allloops[sourcenode], mask_this)\n",
+    "    except:  # Account for 0 loop nodes\n",
+    "        allloops_bound[sourcenode] = {}"
    ]
   },
   {
@@ -272,13 +277,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes_loopnum = nodes.drop(\n",
+    "nodes_loopnum1 = nodes.drop(\n",
     "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
     ")  # drop all data\n",
-    "nodes_loopnum.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
-    "nodes_loopnum[\"loopnum\"] = get_vertex_loopnums(allloops, \"log2\").tolist()\n",
+    "nodes_loopnum1.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
+    "nodes_loopnum1[\"loopnum1\"] = get_vertex_loopnums(allloops_bound, \"log2\").tolist()\n",
     "if debug:\n",
-    "    print(nodes_loopnum.head())"
+    "    print(nodes_loopnum1.head())"
    ]
   },
   {
@@ -288,9 +293,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes_loopnumh3 = nodes_loopnum.h3.geo_to_h3_aggregate(6, \"mean\")\n",
+    "nodes_loopnum1h3 = nodes_loopnum1.h3.geo_to_h3_aggregate(6, \"mean\")\n",
     "if debug:\n",
-    "    print(nodes_loopnumh3.head())"
+    "    print(nodes_loopnum1h3.head())"
    ]
   },
   {
@@ -300,8 +305,179 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes_loopnumh3.plot(column=\"loopnum\", figsize=(5, 5), legend=True)\n",
-    "plt.title(\"Average loop bits\");"
+    "nodes_loopnum1h3.plot(column=\"loopnum1\", figsize=(5, 5), legend=True)\n",
+    "plt.title(\"Average loop bits (length restriction)\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "888b1702-daa1-424c-94f0-681423ebe418",
+   "metadata": {},
+   "source": [
+    "#### Restrict to scenario gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbac3605-b5f1-439b-bad1-519e262dd53f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_bound_sloped = {}\n",
+    "for sourcenode in tqdm(allloops_bound, desc=\"Restrict to scenario gradients\"):\n",
+    "    try:\n",
+    "        lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
+    "        maxslopes_this = (\n",
+    "            allloops[sourcenode][\"max_slopes\"] / 100.0\n",
+    "        )  # max_slopes were multiplied by 100 for storage as uint16\n",
+    "        mask_this = lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]\n",
+    "        mask_this &= lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
+    "        mask_this &= maxslopes_this <= SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
+    "        allloops_bound_sloped[sourcenode] = mask_node(allloops[sourcenode], mask_this)\n",
+    "    except:  # Account for 0 loop nodes\n",
+    "        allloops_bound_sloped[sourcenode] = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "384edba2-49ab-460d-86e6-20a7ceba2d67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_loopnum2 = nodes.drop(\n",
+    "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
+    ")  # drop all data\n",
+    "nodes_loopnum2.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
+    "nodes_loopnum2[\"loopnum2\"] = get_vertex_loopnums(allloops_bound_sloped, \"log2\").tolist()\n",
+    "if debug:\n",
+    "    print(nodes_loopnum2.head())\n",
+    "\n",
+    "nodes_loopnum2h3 = nodes_loopnum2.h3.geo_to_h3_aggregate(6, \"mean\")\n",
+    "nodes_loopnum2h3.plot(column=\"loopnum2\", figsize=(5, 5), legend=True)\n",
+    "plt.title(\"Average loop bits (gradient restriction)\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d22de8c-385c-4ae0-a16f-adb7db7bfc62",
+   "metadata": {},
+   "source": [
+    "#### Restrict to water limits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "552ac18d-dc23-469b-8b91-b74f5a10df1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_bound_sloped_watered = {}\n",
+    "for sourcenode in tqdm(allloops_bound_sloped, desc=\"Restrict to water limits\"):\n",
+    "    try:\n",
+    "        numloops = len(allloops_bound_sloped[sourcenode][\"loops\"])\n",
+    "        mask_this = [True] * numloops\n",
+    "        for i in range(numloops):\n",
+    "            wp = allloops_bound_sloped[sourcenode][\"water_profile\"][i]\n",
+    "            water_enough = True\n",
+    "            if wp:  # There is water on the way somewhere. Check distances\n",
+    "                for w in wp:\n",
+    "                    if w > WATERLENGTH_MAX:\n",
+    "                        water_enough = False\n",
+    "                        break\n",
+    "                if water_enough and (\n",
+    "                    allloops_bound_sloped[sourcenode][\"lengths\"][i] - wp[-1]\n",
+    "                    > WATERLENGTH_MAX\n",
+    "                ):\n",
+    "                    water_enough = False\n",
+    "            else:  # No water on the way, so the loop is only valid if short enough\n",
+    "                if allloops_bound_sloped[sourcenode][\"lengths\"][i] > WATERLENGTH_MAX:\n",
+    "                    water_enough = False\n",
+    "            mask_this[i] = water_enough\n",
+    "        allloops_bound_sloped_watered[sourcenode] = mask_node(\n",
+    "            allloops_bound_sloped[sourcenode], mask_this\n",
+    "        )\n",
+    "    except:  # Account for 0 loop nodes\n",
+    "        allloops_bound_sloped_watered[sourcenode] = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0174eefb-f75e-4343-bb63-297c6cd22bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_loopnum3 = nodes.drop(\n",
+    "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
+    ")  # drop all data\n",
+    "nodes_loopnum3.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
+    "nodes_loopnum3[\"loopnum3\"] = get_vertex_loopnums(\n",
+    "    allloops_bound_sloped_watered, \"log2\"\n",
+    ").tolist()\n",
+    "if debug:\n",
+    "    print(nodes_loopnum3.head())\n",
+    "\n",
+    "nodes_loopnum3h3 = nodes_loopnum3.h3.geo_to_h3_aggregate(6, \"mean\")\n",
+    "nodes_loopnum3h3.plot(column=\"loopnum3\", figsize=(5, 5), legend=True)\n",
+    "plt.title(\"Average loop bits (water restriction)\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2142bee4-92ac-4ed1-9bfa-44cd61e05231",
+   "metadata": {},
+   "source": [
+    "#### Restrict with POI diversity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d0bbc90-ec31-4098-ab71-1dde8ef84a76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_bound_sloped_watered_diverse = {}\n",
+    "for sourcenode in tqdm(\n",
+    "    allloops_bound_sloped_watered, desc=\"Restrict with POI diversity\"\n",
+    "):\n",
+    "    try:\n",
+    "        numloops = len(allloops_bound_sloped_watered[sourcenode][\"loops\"])\n",
+    "        mask_this = [False] * numloops\n",
+    "        for i in range(numloops):\n",
+    "            poidiv = allloops_bound_sloped_watered[sourcenode][\"poi_diversity\"][i]\n",
+    "            if poidiv >= 3:\n",
+    "                mask_this[i] = True\n",
+    "        allloops_bound_sloped_watered_diverse[sourcenode] = mask_node(\n",
+    "            allloops_bound_sloped_watered[sourcenode], mask_this\n",
+    "        )\n",
+    "    except:  # Account for 0 loop nodes\n",
+    "        allloops_bound_sloped_watered_diverse[sourcenode] = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ef989b7-61ad-4a3e-a03a-fd5d96a467bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_loopnum4 = nodes.drop(\n",
+    "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
+    ")  # drop all data\n",
+    "nodes_loopnum4.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
+    "nodes_loopnum4[\"loopnum4\"] = get_vertex_loopnums(\n",
+    "    allloops_bound_sloped_watered_diverse, \"log2\"\n",
+    ").tolist()\n",
+    "if debug:\n",
+    "    print(nodes_loopnum4.head())\n",
+    "\n",
+    "nodes_loopnum4h3 = nodes_loopnum4.h3.geo_to_h3_aggregate(6, \"mean\")\n",
+    "nodes_loopnum4h3.plot(column=\"loopnum4\", figsize=(5, 5), legend=True)\n",
+    "plt.title(\"Average loop bits (POI restriction)\");"
    ]
   },
   {
@@ -319,10 +495,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfunified = nodesh3.join(nodes_loopnumh3.drop(columns=\"geometry\")).rename(\n",
-    "    columns={\"count\": \"Node density\", \"loopnum\": \"Loop bits\"}\n",
+    "dfunified = (\n",
+    "    nodesh3.join(nodes_loopnum1h3.drop(columns=\"geometry\"))\n",
+    "    .join(nodes_loopnum2h3.drop(columns=\"geometry\"))\n",
+    "    .join(nodes_loopnum3h3.drop(columns=\"geometry\"))\n",
+    "    .join(nodes_loopnum4h3.drop(columns=\"geometry\"))\n",
+    "    .rename(\n",
+    "        columns={\n",
+    "            \"count\": \"Node density\",\n",
+    "            \"loopnum1\": \"Loop bits (length)\",\n",
+    "            \"loopnum2\": \"Loop bits (gradient)\",\n",
+    "            \"loopnum3\": \"Loop bits (water)\",\n",
+    "            \"loopnum4\": \"Loop bits (POI)\",\n",
+    "        }\n",
+    "    )\n",
     ")\n",
-    "pd.plotting.scatter_matrix(dfunified, alpha=0.05, figsize=(6, 6));"
+    "\n",
+    "pd.plotting.scatter_matrix(dfunified, alpha=0.05, figsize=(10, 10));"
    ]
   }
  ],
