Add edge properties to H3

--- a/code/05DK_hexgrid_correlations.ipynb
+++ b/code/05DK_hexgrid_correlations.ipynb
@@ -232,7 +232,145 @@
    "outputs": [],
    "source": [
     "nodesh3.plot(column=\"count\", figsize=(5, 5), legend=True)\n",
-    "plt.title(\"Node density\");"
+    "plt.title(\"Node density\")\n",
+    "plt.gca().axis(\"off\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7867c771-5107-4488-9670-b8c08ababd40",
+   "metadata": {},
+   "source": [
+    "### Edge properties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ec2d36a-5b79-4f33-a275-345f4ce2b8c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edgesh3 = edges.to_crs(epsg=25832)  # do geometric operations on projected CRS\n",
+    "edgesh3[\"geometry\"] = edgesh3.geometry.centroid\n",
+    "edgesh3.to_crs(epsg=4326, inplace=True)  # project back for H3\n",
+    "if debug:\n",
+    "    print(edgesh3.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1b66e9c-a9dc-46f2-b25c-087b509f7068",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_length = edgesh3[[\"weight\", \"geometry\"]]\n",
+    "edges_max_slope = edgesh3[[\"weight\", \"max_slope\", \"geometry\"]]\n",
+    "edges_has_water = edgesh3[[\"weight\", \"has_water\", \"geometry\"]]\n",
+    "edges_has_water[\"has_water\"] = edges_has_water[\"has_water\"].astype(\n",
+    "    int\n",
+    ")  # Turn True/False into 1/0\n",
+    "edges_poi_diversity = edgesh3[[\"weight\", \"poi_diversity\", \"geometry\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06672c5f-d86f-46d6-8266-c111433b8faf",
+   "metadata": {},
+   "source": [
+    "Weighted means (by length):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d6a41cf-30d7-4542-965c-e3711965bd10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://stackoverflow.com/questions/31521027/groupby-weighted-average-and-sum-in-pandas-dataframe\n",
+    "wm = {\n",
+    "    \"max_slope\": lambda x: np.average(x, weights=edges_max_slope.loc[x.index, \"weight\"])\n",
+    "}\n",
+    "edges_max_slope_wmh3 = edges_max_slope.h3.geo_to_h3_aggregate(6, wm)\n",
+    "\n",
+    "wm = {\n",
+    "    \"has_water\": lambda x: np.average(x, weights=edges_has_water.loc[x.index, \"weight\"])\n",
+    "}\n",
+    "edges_has_water_wmh3 = edges_has_water.h3.geo_to_h3_aggregate(6, wm)\n",
+    "\n",
+    "wm = {\n",
+    "    \"poi_diversity\": lambda x: np.average(\n",
+    "        x, weights=edges_poi_diversity.loc[x.index, \"weight\"]\n",
+    "    )\n",
+    "}\n",
+    "edges_poi_diversity_wmh3 = edges_poi_diversity.h3.geo_to_h3_aggregate(6, wm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdff2a40-fb9b-443b-90ad-9409f00fc34e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_max_slope_wmh3.plot(column=\"max_slope\", figsize=(5, 5), legend=True)\n",
+    "plt.title(\"Maximum gradient (weighted)\")\n",
+    "plt.gca().axis(\"off\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b104cd1-cca6-4e21-8579-49e58bcd19c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_has_water_wmh3.plot(column=\"has_water\", figsize=(5, 5), legend=True)\n",
+    "plt.title(\"Has water (weighted)\")\n",
+    "plt.gca().axis(\"off\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdd25380-5bfd-497f-8c8b-9d3e4391a4a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_poi_diversity_wmh3.plot(column=\"poi_diversity\", figsize=(5, 5), legend=True)\n",
+    "plt.title(\"POI diversity (weighted)\")\n",
+    "plt.gca().axis(\"off\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e93bb5d2-f138-4d50-a568-cd2c96ffb276",
+   "metadata": {},
+   "source": [
+    "Unweighted means:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdb94075-16da-4e4b-9f95-7631b368d2eb",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "edges_lengthh3 = edges_length.h3.geo_to_h3_aggregate(6, \"mean\")\n",
+    "edges_max_slopeh3 = edges_max_slope.h3.geo_to_h3_aggregate(\n",
+    "    6, \"mean\"\n",
+    ")  # not weighted by length\n",
+    "edges_has_waterh3 = edges_has_water.h3.geo_to_h3_aggregate(\n",
+    "    6, \"mean\"\n",
+    ")  # not weighted by length\n",
+    "edges_poi_diversityh3 = edges_poi_diversity.h3.geo_to_h3_aggregate(\n",
+    "    6, \"mean\"\n",
+    ")  # not weighted by length"
    ]
   },
   {
@@ -306,7 +444,8 @@
    "outputs": [],
    "source": [
     "nodes_loopnum1h3.plot(column=\"loopnum1\", figsize=(5, 5), legend=True)\n",
-    "plt.title(\"Average loop bits (length restriction)\");"
+    "plt.title(\"Average loop bits (length restriction)\")\n",
+    "plt.gca().axis(\"off\");"
    ]
   },
   {
@@ -356,7 +495,8 @@
     "\n",
     "nodes_loopnum2h3 = nodes_loopnum2.h3.geo_to_h3_aggregate(6, \"mean\")\n",
     "nodes_loopnum2h3.plot(column=\"loopnum2\", figsize=(5, 5), legend=True)\n",
-    "plt.title(\"Average loop bits (gradient restriction)\");"
+    "plt.title(\"Average loop bits (gradient restriction)\")\n",
+    "plt.gca().axis(\"off\");"
    ]
   },
   {
@@ -422,7 +562,8 @@
     "\n",
     "nodes_loopnum3h3 = nodes_loopnum3.h3.geo_to_h3_aggregate(6, \"mean\")\n",
     "nodes_loopnum3h3.plot(column=\"loopnum3\", figsize=(5, 5), legend=True)\n",
-    "plt.title(\"Average loop bits (water restriction)\");"
+    "plt.title(\"Average loop bits (water restriction)\")\n",
+    "plt.gca().axis(\"off\");"
    ]
   },
   {
@@ -477,7 +618,8 @@
     "\n",
     "nodes_loopnum4h3 = nodes_loopnum4.h3.geo_to_h3_aggregate(6, \"mean\")\n",
     "nodes_loopnum4h3.plot(column=\"loopnum4\", figsize=(5, 5), legend=True)\n",
-    "plt.title(\"Average loop bits (POI restriction)\");"
+    "plt.title(\"Average loop bits (POI restriction)\")\n",
+    "plt.gca().axis(\"off\");"
    ]
   },
   {
@@ -489,13 +631,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7d78bbe-d25f-43b7-9c57-acd364fad559",
+   "metadata": {},
+   "source": [
+    "### Scenarios"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d747fd9f-2f6b-4cb9-9171-db349a4483e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfunified = (\n",
+    "dfunified_scenarios = (\n",
     "    nodesh3.join(nodes_loopnum1h3.drop(columns=\"geometry\"))\n",
     "    .join(nodes_loopnum2h3.drop(columns=\"geometry\"))\n",
     "    .join(nodes_loopnum3h3.drop(columns=\"geometry\"))\n",
@@ -511,7 +661,83 @@
     "    )\n",
     ")\n",
     "\n",
-    "pd.plotting.scatter_matrix(dfunified, alpha=0.05, figsize=(10, 10));"
+    "pd.plotting.scatter_matrix(dfunified_scenarios, alpha=0.05, figsize=(10, 10));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b266d58-398a-45ec-be96-cb1e3517dce5",
+   "metadata": {},
+   "source": [
+    "### Existing properties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afb2e8c8-046e-4380-b0dd-11edc0f1497f",
+   "metadata": {},
+   "source": [
+    "#### Unweighted by length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d02d97e4-2e38-4438-88e7-098c000de93b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfunified_properties = (\n",
+    "    nodesh3.join(edges_lengthh3.drop(columns=[\"geometry\", \"weight\"]))\n",
+    "    .join(edges_max_slopeh3.drop(columns=[\"geometry\", \"weight\"]))\n",
+    "    .join(edges_has_waterh3.drop(columns=[\"geometry\", \"weight\"]))\n",
+    "    .join(edges_poi_diversityh3.drop(columns=[\"geometry\", \"weight\"]))\n",
+    "    .rename(\n",
+    "        columns={\n",
+    "            \"count\": \"Node density\",\n",
+    "            \"weight\": \"Length\",\n",
+    "            \"max_slope\": \"Maximum gradient\",\n",
+    "            \"has_water\": \"Has water\",\n",
+    "            \"poi_diversity\": \"POI Diversity\",\n",
+    "        }\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "pd.plotting.scatter_matrix(dfunified_properties, alpha=0.05, figsize=(10, 10));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd71ab44-44c7-42fd-a835-26d8e6ad1343",
+   "metadata": {},
+   "source": [
+    "#### Weighted by length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ded6e38a-44f3-43e2-b7d0-b84693589eb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfunified_properties_weighted = (\n",
+    "    nodesh3.join(edges_lengthh3.drop(columns=\"geometry\"))\n",
+    "    .join(edges_max_slope_wmh3.drop(columns=\"geometry\"))\n",
+    "    .join(edges_has_water_wmh3.drop(columns=\"geometry\"))\n",
+    "    .join(edges_poi_diversity_wmh3.drop(columns=\"geometry\"))\n",
+    "    .rename(\n",
+    "        columns={\n",
+    "            \"count\": \"Node density\",\n",
+    "            \"weight\": \"Length\",\n",
+    "            \"max_slope\": \"Maximum gradient\",\n",
+    "            \"has_water\": \"Has water\",\n",
+    "            \"poi_diversity\": \"POI Diversity\",\n",
+    "        }\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "pd.plotting.scatter_matrix(dfunified_properties_weighted, alpha=0.05, figsize=(10, 10));"
    ]
   }
  ],
