--- a/code/05DK_hexgrid_correlations.ipynb
+++ b/code/05DK_hexgrid_correlations.ipynb
@@ -688,7 +688,7 @@
    "outputs": [],
    "source": [
     "dfunified_properties = (\n",
-    "    nodesh3.join(edges_lengthh3.drop(columns=[\"geometry\", \"weight\"]))\n",
+    "    nodesh3.join(edges_lengthh3.drop(columns=[\"geometry\"]))\n",
     "    .join(edges_max_slopeh3.drop(columns=[\"geometry\", \"weight\"]))\n",
     "    .join(edges_has_waterh3.drop(columns=[\"geometry\", \"weight\"]))\n",
     "    .join(edges_poi_diversityh3.drop(columns=[\"geometry\", \"weight\"]))\n",
