--- a/code/05DK_hexgrid_correlations.ipynb
+++ b/code/05DK_hexgrid_correlations.ipynb
@@ -665,6 +665,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76fe4732-8977-41db-a024-692300e66619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(nrows=1, ncols=4, figsize=(14, 3))\n",
+    "\n",
+    "xs = [\n",
+    "    nodes_loopnum1h3[\"loopnum1\"],\n",
+    "    nodes_loopnum2h3[\"loopnum2\"],\n",
+    "    nodes_loopnum3h3[\"loopnum3\"],\n",
+    "    nodes_loopnum4h3[\"loopnum4\"],\n",
+    "]\n",
+    "xlabels = [\"length\", \"gradient\", \"water\", \"POI diversity\"]\n",
+    "\n",
+    "for i in range(len(xs)):\n",
+    "    axes[i].scatter(xs[i], nodesh3[\"count\"], color=\"k\", alpha=0.1)\n",
+    "\n",
+    "    res = stats.linregress(xs[i], nodesh3[\"count\"])\n",
+    "    axes[i].plot(\n",
+    "        xs[i],\n",
+    "        res.slope * xs[i] + res.intercept,\n",
+    "        linewidth=2.5,\n",
+    "        color=\"b\",\n",
+    "    )\n",
+    "\n",
+    "    axes[i].set_xlabel(\n",
+    "        \"Loop bits+1 (\" + xlabels[i] + \" restriction)\"\n",
+    "    )  # +1 because of +1 in get_vertex_loopnums\n",
+    "    if i == 0:\n",
+    "        axes[i].set_ylabel(\"Node density\")\n",
+    "    else:\n",
+    "        axes[i].set_yticklabels([])\n",
+    "\n",
+    "    # https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.linregress.html\n",
+    "    tinv = lambda p, df: abs(scipy.stats.t.ppf(p / 2, df))\n",
+    "    ts = tinv(0.05, len(xs[i]) - 2)\n",
+    "    print(\n",
+    "        f\"slope (95%): {res.slope:.3f} +/- {ts*res.stderr:.3f}, r-value: {res.rvalue:.3f}, p-value: {res.pvalue}\"\n",
+    "    )\n",
+    "    print(f\"intercept (95%): {res.intercept:.3f}\" f\" +/- {ts*res.intercept_stderr:.3f}\")\n",
+    "\n",
+    "    confband(xs[i], nodesh3[\"count\"], axes[i])\n",
+    "    axes[i].set_ylim([0, 23])\n",
+    "    axes[i].set_xlim([-1, 18])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0b266d58-398a-45ec-be96-cb1e3517dce5",
    "metadata": {},
